 6. Add support for showing icons in grid.
 7. Get list of all browse modes from Slim::Menu::BrowseLibrary, as opposed to
    hard-coding.
 8. Long-press on player 'Extra settings' will show all settings.
 9. Long-press on 'Server settings' in 'Information' dialog will show all
    server settings.
10. Don't add 'Empty' list item for empty lists, '0 Items' is stated in
    sub-toolbar.

1.2.2
-----
1. For desktop browsers, auto-focus search field if it is the first item in a
   list. (Issue #198)
2. Force grid re-layout when change item list
3. Fix missing icons in picture viewer.
4. Fix unescaping of titles.

1.2.1
-----
 1. Ignore clicks on search header if all values for that field are being shown.
 2. Allow add-all/play-all from 'trackinfo', as Spotty's 'Top Titles' accessed
    via 'More' needs this
 3. Fix 'Remove album' missing from queue menu in mobile browsers.
 4. Clear queue selection if change player.
 5. Fix unselection of queue items.
 6. Unescape titles - mainly to fix YouTube lists.
 7. Actually start updates checking timer.
 8. Fix location of 'Fixed Volume' label in mini-player.
 9. Minify all material JS files into 1.
10. Combine library JS and CSS files.

1.2.0
-----
 1. Use 'Shift' key to select a range of items.
 2. Add button to invert selection.
 3. Allow protecting alarms and settings via pin/password.
 4. Add option to play silence when lock screen and notification controls are
    enabled.
 5. Only prevent media session if using SB Player when also set to play silence.
 6. Display message indicating insufficient metadata if the required info is not
    present for MAI lyrics, review, or biography.
 7. Add link to user guide from 'Information' dialog.
 8. Show sample rate in technical info.
 9. Long press on prev/next buttons in now playing to skip back/forward 5, 10,
    15, or 30 seconds.
10. Add context menu to now-playing info view to set font size; Standard,
    Medium, or Large.
11. Add Italian translation, thanks to franz159