@@ -92,7 +92,7 @@ const RANDOM_MIX_ID = MUSIC_ID_PREFIX+"randomMix";
 const ALBUM_TAGS = "tags:jlyasS";
 const ARTIST_ALBUM_TAGS = "tags:jly";
 const TRACK_TAGS = "tags:ACdts";
-const PLAYLIST_TAGS = "tags:su";
+const PLAYLIST_TAGS = "tags:sux";
 const SORT_KEY = "sort:";
 const SECTION_APPS = 1;
 const SECTION_FAVORITES = 2;
